force-app/main/default/objects/New_Client_Handover__c/New_Client_Handover__c.object-meta.xml
<CustomObject>
    <label>New Client: Handover</label>
    <nameField>
        <label>New Client: Handover Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Client: Handovers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>