force-app/main/default/objects/New_Client_Handover__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Client: Handovers</relationshipLabel>
    <relationshipName>New_Client_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>