force-app/main/default/objects/New_Client_Handover__c/fields/Background_Notes__c.field-meta.xml
<CustomField>
    <fullName>Background_Notes__c</fullName>
    <label>Background &amp; Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>