force-app/main/default/objects/New_Client_Handover__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Client: Handovers (Billing Contact)</relationshipLabel>
    <relationshipName>New_Client_Handovers1</relationshipName>
    <type>Lookup</type>
</CustomField>