force-app/main/default/objects/New_Client_Handover__c/fields/Credit_App_Location__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Location__c</fullName>
    <label>Credit App Location</label>
    <type>TextArea</type>
</CustomField>