force-app/main/default/objects/New_Client_Handover__c/fields/Day2DayContact__c.field-meta.xml
<CustomField>
    <fullName>Day2DayContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day2Day Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Client: Handovers</relationshipLabel>
    <relationshipName>New_Client_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>