force-app/main/default/objects/New_Client_Handover__c/fields/Insertion_Order_Location__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Order_Location__c</fullName>
    <label>IO Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>