force-app/main/default/objects/New_Client_Handover__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MobileAppTracking</fullName>
            </value>
            <value>
                <fullName>AD-X Tracking</fullName>
            </value>
            <value>
                <fullName>Appsflyer</fullName>
            </value>
            <value>
                <fullName>Kochava</fullName>
            </value>
            <value>
                <fullName>In-Mobi</fullName>
            </value>
            <value>
                <fullName>Adjust</fullName>
            </value>
            <value>
                <fullName>S2S (Internal Tracking)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>