force-app/main/default/objects/New_Client_Handover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advertiser__c</columns>
    <columns>Day2DayContact__c</columns>
    <columns>Status__c</columns>
    <columns>Tracking__c</columns>
    <columns>Insertion_Order_Location__c</columns>
    <columns>Credit_App_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>